--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Build and Deploy
 
-#on:
-#  push:
-#    branches:
-#      - main
-
+on:
+  push:
+    branches-ignore:
+      - '**' # 모든 브랜치의 푸쉬를 무시
+      
 jobs:
   build:
     runs-on: ubuntu-latest
